--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   mongo:
-    image: mongo:6
+    image: mongo:4.4
     container_name: mongo
     restart: always
     ports:
@@ -23,7 +23,7 @@ services:
       - mongo
 
   mongo-express:
-    image: mongo-express:latest
+    image: mongo-express
     container_name: mongo-express
     restart: always
     ports:
@@ -32,6 +32,7 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_PORT: 27017
     depends_on:
       - mongo
 
